--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-cayman
-title: atahan şenşatar
-description: BDA 503 - MEF
+title: Atahan Şenşatar Progress Journal
+description: BDA 503 - MEF - Fall 2019
 
 
