Set theme jekyll-theme-slate

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-slate
 title: Atahan Şenşatar Progress Journal
 description: BDA 503 - MEF - Fall 2019
 
